Removes bounce-in animation on mobile to avoid glitchy performance bug

--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -101,6 +101,9 @@
       margin-top: 1rem;
       margin-bottom: -1rem;
     }
+    &.bounce-in {
+      animation: none !important;
+    }
   }
 
   .vertical-timeline-element:nth-of-type(odd) {
